# LuaCXX

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  changelog_gen.lua
include/: LuaCXX.hpp  LuaCXX_Common.hpp  LuaCXX_Lua.hpp  LuaCXX_MetaObject.hpp  LuaCXX_Stack.hpp  LuaCXX_String.hpp  LuaCXX_Table.hpp  LuaCXX_Thread.hpp  LuaCXX_Userdata.hpp  LuaCXX_Variant.hpp  LuaCXX_Version.hpp
lualib/: Makefile
src/: Internal.hpp  Lua.cpp  Lua_create_variant.cpp  Lua_pseudotables.cpp  Stack.cpp  String.cpp  Table.cpp  Thread.cpp  Variant.cpp  Variant_conversion.cpp  Variant_env.cpp  Variant_metatable.cpp
tests/: CMakeLists.txt  Playground.cpp  testing.h
tests/across_states/: main.cpp
tests/call_lua_function/: main.cpp
tests/compile_and_dump/: main.cpp
tests/funcs_binded_values/: main.cpp
tests/function_env/: main.cpp
tests/get_set_globals/: main.cpp
tests/get_set_registry/: main.cpp
tests/iterate_table/: main.cpp
tests/lib_making/: main.cpp
tests/metatable_userdata/: main.cpp
tests/protected_calls/: main.cpp
